--- a/Compiler/Compiler.csproj
+++ b/Compiler/Compiler.csproj
@@ -183,6 +183,7 @@
   <ItemGroup>
     <Compile Include="AST\AST.cs" />
     <Compile Include="AST\ASTNode.cs" />
+    <Compile Include="AST\CodeGenVisitor\CodeGenException.cs" />
     <Compile Include="AST\ConsolePrintVisitor\ASTPrintVisitor.cs" />
     <Compile Include="AST\IASTVisitor.cs" />
     <Compile Include="AST\Nodes\BinaryOperatorNode.cs" />
