--- a/Antlr/ZAntlr.csproj
+++ b/Antlr/ZAntlr.csproj
@@ -6,7 +6,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{0BBF057B-334F-4209-B055-3B9A3339F7CB}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <RootNamespace>ZAntlr</RootNamespace>
     <AssemblyName>Antlr</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
@@ -34,6 +34,9 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Antlr4.Runtime, Version=4.6.0.0, Culture=neutral, PublicKeyToken=09abb75b9ed49849, processorArchitecture=MSIL">
@@ -70,8 +73,8 @@
     <Compile Include="AST\Types\INodeType.cs" />
     <Compile Include="AST\Types\NoneType.cs" />
     <Compile Include="AST\Types\VariableType.cs" />
-    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SourcePosition.cs" />
     <Compile Include="Visitors\ASTGeneratorVisitor.cs" />
     <Compile Include="Visitors\ASTPrintVisitor.cs" />
     <Compile Include="ZLexer.g4.cs">
