--- a/Compiler/packages.config
+++ b/Compiler/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Colorful.Console" version="1.2.9" targetFramework="net472" />
+  <package id="CommandLineParser" version="2.4.3" targetFramework="net472" />
   <package id="LibLLVM" version="5.0.1" targetFramework="net472" />
   <package id="LLVMSharp" version="5.0.0" targetFramework="net472" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net472" />
