More work on error messages and started adding back in types and code gen with new parser

--- a/Antlr/ZAntlr.csproj
+++ b/Antlr/ZAntlr.csproj
@@ -67,6 +67,7 @@
     <Compile Include="AST\Nodes\ProgramNode.cs" />
     <Compile Include="AST\Nodes\PrototypeNode.cs" />
     <Compile Include="AST\Nodes\TypeCastNode.cs" />
+    <Compile Include="AST\Nodes\ITypeDeclarationNode.cs" />
     <Compile Include="AST\Nodes\UnaryOperatorNode.cs" />
     <Compile Include="AST\Nodes\VariableTypeDeclarationNode.cs" />
     <Compile Include="AST\Types\FunctionType.cs" />
@@ -75,6 +76,7 @@
     <Compile Include="AST\Types\VariableType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SourcePosition.cs" />
+    <Compile Include="Utils.cs" />
     <Compile Include="Visitors\ASTGeneratorVisitor.cs" />
     <Compile Include="Visitors\ASTPrintVisitor.cs" />
     <Compile Include="ZLexer.g4.cs">
