--- a/Compiler/Compiler.csproj
+++ b/Compiler/Compiler.csproj
@@ -203,57 +203,17 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AST\AST.cs" />
-    <Compile Include="AST\ASTNode.cs" />
+    <Compile Include="AST\BinaryOperatorOpCode.cs" />
     <Compile Include="AST\CodeGenVisitor\BinaryOperators.cs" />
     <Compile Include="AST\CodeGenVisitor\CodeGenException.cs" />
     <Compile Include="AST\CodeGenVisitor\Functions.cs" />
     <Compile Include="AST\CodeGenVisitor\TypeCasting.cs" />
-    <Compile Include="AST\ConsolePrintVisitor\ASTPrintVisitor.cs" />
-    <Compile Include="AST\IASTVisitor.cs" />
-    <Compile Include="AST\Nodes\BinaryOperatorNode.cs" />
     <Compile Include="AST\CodeGenVisitor\ASTCodeGenVisitor.cs" />
-    <Compile Include="AST\Nodes\Constants.cs" />
-    <Compile Include="AST\Nodes\FunctionNode.cs" />
-    <Compile Include="AST\Nodes\FunctionCallNode.cs" />
-    <Compile Include="AST\Nodes\IdentifierNode.cs" />
-    <Compile Include="AST\Nodes\IdentifierTypeNode.cs" />
-    <Compile Include="AST\Nodes\IfExpressionNode.cs" />
-    <Compile Include="AST\Nodes\LetExpressionNode.cs" />
-    <Compile Include="AST\Nodes\PrototypeNode.cs" />
-    <Compile Include="AST\Nodes\TypeCastNode.cs" />
-    <Compile Include="AST\Nodes\UnaryOperatorNode.cs" />
     <Compile Include="AST\TypeCheckVisitor\ASTTypeCheckVisitor.cs" />
     <Compile Include="AST\TypeCheckVisitor\TypeCheckException.cs" />
-    <Compile Include="AST\Types\FunctionType.cs" />
-    <Compile Include="AST\Types\INodeType.cs" />
-    <Compile Include="AST\Types\NoneType.cs" />
-    <Compile Include="AST\Types\VariableType.cs" />
     <Compile Include="Errors\ErrorIndex.cs" />
     <Compile Include="Errors\ErrorListener.cs" />
     <Compile Include="Errors\ErrorLogger.cs" />
-    <Compile Include="Parser\Basics\Constants.cs" />
-    <Compile Include="Parser\Basics\Identifiers.cs" />
-    <Compile Include="Parser\Basics\Operators.cs" />
-    <Compile Include="Parser\Basics\Reserved.cs" />
-    <Compile Include="Parser\Basics\Types.cs" />
-    <Compile Include="Parser\Basics\WhiteSpace.cs" />
-    <Compile Include="Parser\Expressions\Expressions.cs" />
-    <Compile Include="Parser\Functions\FunctionCall.cs" />
-    <Compile Include="Parser\Functions\FunctionDeclaration.cs" />
-    <Compile Include="Parser\Functions\FunctionDefinition.cs" />
-    <Compile Include="Parser\OperatorTypes.cs" />
-    <Compile Include="Parser\ParseExtensions.cs" />
-    <Compile Include="PidginParser\CommentParser.cs" />
-    <Compile Include="PidginParser\ExpressionParser.cs" />
-    <Compile Include="PidginParser\FunctionaDeclarationParser.cs" />
-    <Compile Include="PidginParser\FunctionDefinitionParser.cs" />
-    <Compile Include="PidginParser\IdentifierParser.cs" />
-    <Compile Include="PidginParser\OperatorParser.cs" />
-    <Compile Include="PidginParser\ProgramParser.cs" />
-    <Compile Include="PidginParser\Reserved.cs" />
-    <Compile Include="PidginParser\TypeParser.cs" />
-    <Compile Include="PidginParser\Utils.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
