--- a/Antlr/ZAntlr.csproj
+++ b/Antlr/ZAntlr.csproj
@@ -63,7 +63,9 @@
     <Compile Include="AST\Nodes\IdentifierNode.cs" />
     <Compile Include="AST\Nodes\IdentifierTypeNode.cs" />
     <Compile Include="AST\Nodes\IfExpressionNode.cs" />
+    <Compile Include="AST\Nodes\ImportNode.cs" />
     <Compile Include="AST\Nodes\LetExpressionNode.cs" />
+    <Compile Include="AST\Nodes\ModuleNode.cs" />
     <Compile Include="AST\Nodes\ProgramNode.cs" />
     <Compile Include="AST\Nodes\PrototypeNode.cs" />
     <Compile Include="AST\Nodes\TypeCastNode.cs" />
